# SRTMtoDDM

./: .gitignore  README.md  convert.py  pyproject.toml  raw_script_convert.py
src/: __init__.py  exploreGeoTIFF.py  utils.py
