[tool.poetry]
name = "srtmtoddm"
version = "0.1.0"
description = ""
authors = ["meghanabhange <meghanabhange13@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
structlog = "^22.3.0"
GDAL = "^3.6.1"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
